--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -33,9 +33,33 @@
     .dropdown-menu > li:hover > .dropdown-submenu {
     display: block;
     }
+
+    .mene{
+      background: linear-gradient(0deg, #ff7300 0%, #ffffff 56%);
+            position: fixed;
+      top: 0;
+      color: white;
+
+      width: 100%;
+      z-index: 1000;
+      overflow: hidden;
+      margin-top:5rem;
+      margin-bottom:5rem;
+
+    }
+
+    .navbar{
+      background:white;
+      color: white;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      overflow: hidden;
+    }
 </style>
 <header class="section-header">
-    <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
+    <nav class=" navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
     <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop4" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,7 +76,7 @@
     </div> <!-- container //  -->
     </nav>
     
-    <section class="header-main border-bottom">
+    <section class="mene header-main border-bottom">
 
         <div class="container">
 
