--- a/templates/home.html
+++ b/templates/home.html
@@ -122,8 +122,7 @@
 
 <header class="section-heading">
 	<a href="{% url 'store' %}" class="see btn btn-outline-success float-right">See all</a><br>
-	<h2 class="brand section-title position-relative text-uppercase 
-	"  >Popular Products</h2>
+	<h2 class="brand section-title position-relative text-uppercase" style="background: #aa2855;">Popular Products</h2>
 </header><!-- sect-heading -->
 
 <small>
@@ -166,8 +165,7 @@
 
 
 	<div class="container-fluid pt-5">
-        <h2 class="brand section-title position-relative text-uppercase mx-xl-5
-            mb-4"  >Brands</h2>
+        <h2 class="brand section-title position-relative text-uppercase mx-xl-5 mb-4" style="background: #aa2855;" >Brands</h2>
 			
         <div class="row px-xl-5 pb-3">
           {% for brand in all_brands %}
@@ -202,11 +200,15 @@
 <!-- ========================= SECTION  END// ========================= -->
 
 
-<h2>Welcome to our Home Page</h2>
     
     {% if deal %}
-        <h3>Deal of the Day</h3>
-        <p>Product: {{ deal.product.product_name }}</p>
+
+	<h2 class="deal" style="margin-right: 20pc; text-align: center; background-color: #e48cab; border-radius: 50px; margin-left: 20pc;"  >Deal of the day
+	</h2>
+		
+
+
+	<p>Product: {{ deal.product.product_name }}</p>
         <p>Discount: {{ deal.discount_percentage }}%</p>
         <p>Start Date: {{ deal.start_date }}</p>
         <p>End Date: {{ deal.end_date }}</p>
